@@ -1,5 +1,10 @@
 2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/category/WaterfallRenderer.java
+    (drawItem): Fixed bar misalignment when maxBarWidth is applied.
+
+2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/VectorRenderer.java
     (drawItem): Add chart entity.
 
